Socket.io connect success

--- a/index.html
+++ b/index.html
@@ -6,4 +6,8 @@
 <body>
 	<div>Hello</div>
 </body>
+<script type="text/javascript" src="/socket.io/socket.io.js"></script>
+<script type="text/javascript">
+    var socket = io()
+</script>
 </html>
